# RandomPythonScripts

./: LICENSE  README.md  interviewquestions.py  pyproject.toml  setup.cfg  setup.py
src/scripts/: hashingstuffs.py  interviewquestions.py  permutations.py
src/scripts.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_scripts.py
