[metadata]
name = scripts
description = random scripts that seem cool
author = Matthew Widdop
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    scripts
install_requires = 
    numpy>=1.23
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no